<resources>
    <string name="app_name">Set It Up</string>

    <string name="search_title">Search</string>
    <string name="sort_title">Sort</string>
    <string name="empty">Empty</string>
    <string name="contacts">Contacts</string>
    <string name="sms">Sms</string>
    <string name="calendar">Calendar</string>
    <string name="date">Date</string>

    <string name="name_email_com">name@email.com</string>
    <string name="some_name">Not Signed In</string>
    <string name="acc_dialog_title">Select Account</string>
    <string name="cancel">Cancel</string>
    <string name="add_acc">Add Account</string>
    <string name="search_hint">Find a contact</string>
</resources>
